--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,170 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*fonts*/
+
+@import url('https://fonts.googleapis.com/css?family=Roboto|Rubik');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap');
+
+:root{
+  --sidebar-flex:1.5;
+  --condiv-flex:6;
+  --fontsize-p:1.2rem;
+  --fontsize-nav:1.6rem;
+  --typing-font:3rem;
+}
+*
+{
+  margin:0;
+  padding: 0;
+}
+body{
+  text-shadow: 1px 1px 3px #000000;
+  font-family: 'Roboto', cursive;
+}
+.App
+{
+  display: flex;
+  width: 100vw;
+  min-height: 100vh;
+}
+nav
+{
+  padding:60px 30px 0px 30px ;
+  flex:var(--sidebar-flex);
+  background: linear-gradient(180deg, #0085ff 50%, #85c3ff 80%);
+}
+.condiv
+{
+  padding: 100px ;
+  background-color: #eeeeee;
+  flex:var(--condiv-flex);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.home
+{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.profilepic
+{
+  border-radius: 50%;
+  width: 200px;
+  margin: 30px;
+}
+.typingeffect
+{
+  font-size: var(--typing-font);
+  margin-bottom: 30px;
+}
+
+nav ul{
+  font-size:var(--fontsize-nav) ;
+  text-align: center;
+  list-style-type: none;
+  text-decoration: none;
+  color: #23374d !important;
+  text-shadow: #000000;
+}
+nav ul li
+{
+  margin:40px;
+}
+
+a
+{
+  text-decoration: none;
+  color: #23374d;
+}
+
+.subtopic
+{
+  margin:10px 10px 30px 10px !important;
+}
+p{
+  font-size: var(--fontsize-p);
+}
+h1,h2,h3,h4,p{
+  margin: 10px;
+}
+.social
+{
+  position: absolute;
+  margin-top: 20px;
+  display: flex;
+  bottom: 60px;
+  color: #000000;
+}
+.social i
+{
+  padding-right: 30px;
+  font-size: 25px;
+  color: #000000;
+}
+.social i:hover
+{
+  color: #000000;
+}
+
+.widecard
+{
+  border:0px solid #85c3ff;
+  display: flex;
+  margin:30px 0px 30px 0px;
+}
+.widecard:hover
+{
+  color: #23374d;
+  background-color: #eeeeee;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.active
+{
+  font-weight: bolder;
+}
+.skills ul li
+{
+  list-style-type:none;
+  margin:30px;
+}
+
+@media all and (max-width: 450px) {
+  :root {
+    --fontsize-nav:1rem;
+    --sidebar-flex:0;
+    --typing-font:2rem;
+  }
+  .App
+  {
+    flex-direction: column;
+  }
+  .sidebar
+  {
+    padding: 30px;
+    background: linear-gradient(180deg, #0085ff 50%, #85c3ff 80%);
+  }
+  .condiv
+  {
+    padding: 50px ;
+  }
+  nav ul
+  {
+    display: flex;
+  }
+  nav ul li
+  {
+    margin: 10px;
+  }
+  .social
+  {
+    left:0;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    bottom: 30px;
+  }
+  .social i
+  {
+    padding-right: 0px;
+  }
 }
