--- a/src/components/SideNav/Navbar.css
+++ b/src/components/SideNav/Navbar.css
@@ -2,12 +2,11 @@
     background-color: #060b26;
     height: 80px;
     display: flex;
-    justify-content: start;
     align-items: center;
   }
   
   .menu-bars {
-    margin-left: 2rem;
+    margin: 2rem;
     font-size: 2rem;
     background: none;
   }
@@ -31,7 +30,6 @@
   
   .nav-text {
     display: flex;
-    justify-content: start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
@@ -41,7 +39,7 @@
   .nav-text a {
     text-decoration: none;
     color: #f5f5f5;
-    font-size: 18px;
+    font-size: 22px;
     width: 95%;
     height: 100%;
     display: flex;
@@ -51,9 +49,14 @@
   }
   
   .nav-text a:hover {
-    background-color: #1a83ff;
+    color: #1a83ff; 
   }
   
   .nav-menu-items {
     width: 100%;
   }
+
+  .nav-icon{
+    margin:5px
+  }
+  
